fdo#82241 fix autocompletion for calc functions with

dot or underscore in function name

Change-Id: Id460cad619098265b4ae000894df64a996ef0514
Reviewed-on: https://gerrit.libreoffice.org/10801
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>